--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     />
     <link rel="stylesheet" href="./css/style.min.css" />
     <script src="./js/tabs.js" defer></script>
+    <script src="./js/modal.js" defer></script>
+    <script src="./js/menu.js" defer></script>
+    <script src="./js/accordeon.js" defer></script>
   </head>
 
   <body>
