--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <script src="./js/modal.js" defer></script>
     <script src="./js/menu.js" defer></script>
     <script src="./js/accordeon.js" defer></script>
+    <script src="./js/timer.js" defer></script>
+    <script src="./js/scroll.js"></script>
   </head>
 
   <body>
@@ -423,5 +425,7 @@
       </div>
     </div>
     <!-- modal (end) -->
+		 <script src="https://cdn.jsdelivr.net/npm/seamless-scroll-polyfill@latest"></script>
+<script>
   </body>
 </html>
