--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script src="./js/menu.js" defer></script>
     <script src="./js/accordeon.js" defer></script>
     <script src="./js/timer.js" defer></script>
-    <script src="./js/scroll.js"></script>
+    <script src="./js/scroll.js" defer></script>
   </head>
 
   <body>
