--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <script src="./js/menu.js" defer></script>
     <script src="./js/accordeon.js" defer></script>
     <script src="./js/timer.js" defer></script>
-    <script src="./js/scroll.js"></script>
+    <script src="./js/scroll.js" defer></script>
+    <script src="./js/sendForm.js" defer></script>
   </head>
 
   <body>
@@ -362,18 +363,29 @@
               проект
             </p>
             <form class="form form-test-drive">
-              <input type="text" class="input" name="name" placeholder="Имя" />
-              <input
-                type="mail"
-                class="input"
-                name="mail"
-                placeholder="Электронная почта"
-              />
               <input
                 type="text"
                 class="input"
+                name="name"
+                id="name"
+                placeholder="Имя"
+                autocomplete="name"
+              />
+              <input
+                type="email"
+                class="input"
+                name="mail"
+                id="mail"
+                placeholder="Электронная почта"
+                autocomplete="email"
+              />
+              <input
+                type="tel"
+                class="input"
                 name="phone"
+                id="phone"
                 placeholder="Телефон"
+                autocomplete="tel"
               />
               <button type="submit" class="button form__button">
                 Отправить
@@ -406,14 +418,18 @@
           <input
             type="text"
             name="name"
+            id="modal-name"
             class="input modal__input"
             placeholder="Имя"
+            autocomplete="name"
           />
           <input
-            type="mail"
+            type="email"
             name="mail"
+            id="modal-mail"
             class="input modal__input"
             placeholder="Электронная почта"
+            autocomplete="email"
           />
           <div class="modal-buttons">
             <button type="submit" class="button modal__button">
@@ -425,7 +441,6 @@
       </div>
     </div>
     <!-- modal (end) -->
-		 <script src="https://cdn.jsdelivr.net/npm/seamless-scroll-polyfill@latest"></script>
-<script>
+    <script src="https://cdn.jsdelivr.net/npm/seamless-scroll-polyfill@latest"></script>
   </body>
 </html>
