--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src="./js/accordeon.js" defer></script>
     <script src="./js/timer.js" defer></script>
     <script src="./js/scroll.js" defer></script>
+    <script src="./js/sendForm.js" defer></script>
   </head>
 
   <body>
